--- a/Jupyter/Forecasting/Forecasting.ipynb
+++ b/Jupyter/Forecasting/Forecasting.ipynb
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dickey fuller test and standardize data"
+    "### Dickey fuller test and stationary data"
    ]
   },
   {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -471,29 +471,29 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(0,1,0)(1,3,1)[12]             : AIC=1041.898, Time=1.75 sec\n",
-      " ARIMA(0,1,0)(0,3,0)[12]             : AIC=1086.510, Time=0.20 sec\n",
-      " ARIMA(1,1,0)(1,3,0)[12]             : AIC=1006.529, Time=1.29 sec\n",
-      " ARIMA(0,1,1)(0,3,1)[12]             : AIC=inf, Time=2.95 sec\n",
-      " ARIMA(1,1,0)(0,3,0)[12]             : AIC=1046.710, Time=0.42 sec\n",
-      " ARIMA(1,1,0)(2,3,0)[12]             : AIC=1008.373, Time=2.90 sec\n",
-      " ARIMA(1,1,0)(1,3,1)[12]             : AIC=1007.986, Time=1.85 sec\n",
-      " ARIMA(1,1,0)(0,3,1)[12]             : AIC=inf, Time=2.63 sec\n",
-      " ARIMA(1,1,0)(2,3,1)[12]             : AIC=1009.293, Time=6.74 sec\n",
-      " ARIMA(0,1,0)(1,3,0)[12]             : AIC=1043.987, Time=0.73 sec\n",
-      " ARIMA(2,1,0)(1,3,0)[12]             : AIC=979.906, Time=1.96 sec\n",
-      " ARIMA(2,1,0)(0,3,0)[12]             : AIC=1037.032, Time=0.77 sec\n",
-      " ARIMA(2,1,0)(2,3,0)[12]             : AIC=979.401, Time=3.55 sec\n",
+      " ARIMA(0,1,0)(1,3,1)[12]             : AIC=1041.898, Time=2.40 sec\n",
+      " ARIMA(0,1,0)(0,3,0)[12]             : AIC=1086.510, Time=0.19 sec\n",
+      " ARIMA(1,1,0)(1,3,0)[12]             : AIC=1006.529, Time=1.41 sec\n",
+      " ARIMA(0,1,1)(0,3,1)[12]             : AIC=inf, Time=3.51 sec\n",
+      " ARIMA(1,1,0)(0,3,0)[12]             : AIC=1046.710, Time=0.43 sec\n",
+      " ARIMA(1,1,0)(2,3,0)[12]             : AIC=1008.373, Time=2.91 sec\n",
+      " ARIMA(1,1,0)(1,3,1)[12]             : AIC=1007.986, Time=1.81 sec\n",
+      " ARIMA(1,1,0)(0,3,1)[12]             : AIC=inf, Time=2.61 sec\n",
+      " ARIMA(1,1,0)(2,3,1)[12]             : AIC=1009.293, Time=6.60 sec\n",
+      " ARIMA(0,1,0)(1,3,0)[12]             : AIC=1043.987, Time=0.71 sec\n",
+      " ARIMA(2,1,0)(1,3,0)[12]             : AIC=979.906, Time=1.92 sec\n",
+      " ARIMA(2,1,0)(0,3,0)[12]             : AIC=1037.032, Time=0.75 sec\n",
+      " ARIMA(2,1,0)(2,3,0)[12]             : AIC=979.401, Time=3.58 sec\n",
       " ARIMA(2,1,0)(2,3,1)[12]             : AIC=inf, Time=7.89 sec\n",
-      " ARIMA(2,1,0)(1,3,1)[12]             : AIC=inf, Time=5.08 sec\n",
-      " ARIMA(3,1,0)(2,3,0)[12]             : AIC=980.654, Time=4.03 sec\n",
-      " ARIMA(2,1,1)(2,3,0)[12]             : AIC=inf, Time=9.57 sec\n",
-      " ARIMA(1,1,1)(2,3,0)[12]             : AIC=inf, Time=6.95 sec\n",
-      " ARIMA(3,1,1)(2,3,0)[12]             : AIC=inf, Time=9.83 sec\n",
-      " ARIMA(2,1,0)(2,3,0)[12] intercept   : AIC=979.401, Time=3.64 sec\n",
+      " ARIMA(2,1,0)(1,3,1)[12]             : AIC=inf, Time=5.52 sec\n",
+      " ARIMA(3,1,0)(2,3,0)[12]             : AIC=980.654, Time=4.45 sec\n",
+      " ARIMA(2,1,1)(2,3,0)[12]             : AIC=inf, Time=9.47 sec\n",
+      " ARIMA(1,1,1)(2,3,0)[12]             : AIC=inf, Time=6.88 sec\n",
+      " ARIMA(3,1,1)(2,3,0)[12]             : AIC=inf, Time=10.32 sec\n",
+      " ARIMA(2,1,0)(2,3,0)[12] intercept   : AIC=979.401, Time=3.61 sec\n",
       "\n",
       "Best model:  ARIMA(2,1,0)(2,3,0)[12]          \n",
-      "Total fit time: 74.755 seconds\n",
+      "Total fit time: 76.999 seconds\n",
       "979.4013505884833\n"
      ]
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -523,8 +523,8 @@
       "==========================================================================================\n",
       "Dep. Variable:                                  y   No. Observations:                  156\n",
       "Model:             SARIMAX(2, 1, 0)x(2, 3, 0, 12)   Log Likelihood                -483.701\n",
-      "Date:                            Sun, 16 Aug 2020   AIC                            979.401\n",
-      "Time:                                    21:58:44   BIC                            996.076\n",
+      "Date:                            Mon, 17 Aug 2020   AIC                            979.401\n",
+      "Time:                                    16:01:17   BIC                            996.076\n",
       "Sample:                                         0   HQIC                           986.172\n",
       "                                            - 156                                         \n",
       "Covariance Type:                              opg                                         \n",
@@ -562,16 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x229d72025c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e72d573a48>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -632,10 +632,10 @@
        "  <th>Model:</th>           <td>SARIMAX(2, 1, 3)x(1, 1, [1], 12)</td> <th>  Log Likelihood     </th> <td>-353.279</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                    <td>Sun, 16 Aug 2020</td>         <th>  AIC                </th>  <td>722.559</td>\n",
+       "  <th>Date:</th>                    <td>Mon, 17 Aug 2020</td>         <th>  AIC                </th>  <td>722.559</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                        <td>21:58:53</td>             <th>  BIC                </th>  <td>744.235</td>\n",
+       "  <th>Time:</th>                        <td>16:01:19</td>             <th>  BIC                </th>  <td>744.235</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                     <td>01-01-1960</td>            <th>  HQIC               </th>  <td>731.352</td>\n",
@@ -698,8 +698,8 @@
        "============================================================================================\n",
        "Dep. Variable:              Monthly beer production   No. Observations:                  124\n",
        "Model:             SARIMAX(2, 1, 3)x(1, 1, [1], 12)   Log Likelihood                -353.279\n",
-       "Date:                              Sun, 16 Aug 2020   AIC                            722.559\n",
-       "Time:                                      21:58:53   BIC                            744.235\n",
+       "Date:                              Mon, 17 Aug 2020   AIC                            722.559\n",
+       "Time:                                      16:01:19   BIC                            744.235\n",
        "Sample:                                  01-01-1960   HQIC                           731.352\n",
        "                                       - 04-01-1970                                         \n",
        "Covariance Type:                                opg                                         \n",
@@ -726,7 +726,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
     "\n",
     "plt.figure(figsize=(16,8))\n",
     "\n",
-    "# Plot past CO2 levels\n",
+    "# Plot past sales\n",
     "plt.plot(df.index, df, label='real')\n",
     "\n",
     "# Plot the prediction means as line\n",
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "89.05210836108154"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
        "0                        4.027151  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
